--- a/index.html
+++ b/index.html
@@ -60,29 +60,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   	<div class="banner-wrap">
 				   	       	<div class="banner_center">
 				   		 		<h1>hello world,</h1> 
-				   		 		<h2>i am <span>graphic & web designer</span></h2>
-				   		 		<h2>from morocco</h2>
+				   		 		<h2>i am <span>Devops Engineer/span></h2>
+				   		 		<h2>from Toronto</h2>
 				   		 		</div>
 				   		 </div>
 					</article>
-				   <article style="position: relative; width: 100%; opacity: 1;"> 
-				   	   	<div class="banner-wrap">
-				   	      <div class="banner_center">
-				   		 		<h1>Content here,</h1> 
-				   		 		<h2>Lorem <span>graphic &  designer</span></h2>
-				   		 		<h2>Contrary</h2>
-				   		 		</div>
-				   		  </div>
-				   </article>
-				   <article style="position: absolute; width: 100%; opacity: 0;">
-				   	  	<div class="banner-wrap">
-				   	       <div class="banner_center">
-				   		 		<h1>Lorem Ipsum ,</h1> 
-				   		 		<h2>Contrary to <span>&  designer</span></h2>
-				   		 		<h2>reproduced below</h2>
-				   		 		</div>
-				   		 </div>
-					 </article>
+				
+			
 				 </div>
 				
             </div>
