changing the key

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   	<div class="banner-wrap">
 				   	       	<div class="banner_center">
 				   		 		<h1>hello world,</h1> 
-				   		 		<h2>i am <span>Devops Engineer/span></h2>
+				   		 		<h2>i am <span>Devops Engineer</span></h2>
 				   		 		<h2>from Toronto</h2>
 				   		 		</div>
 				   		 </div>
