adding github link to icon3

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="social-icon">
 				<a href="#"><i class="icon1"></i></a>
 				<a href="#"><i class="icon2"></i></a>
-				<a href="#"><i class="icon3"></i></a>
+				<a href="https://github.com/sravanre"><i class="icon3"></i></a>
 				<a href="#"><i class="icon4"></i></a>
 				<a href="#"><i class="icon5"></i></a>
 				<a href="#"><i class="icon6"></i></a>
